--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
 RewriteCond $1 !^(assets|source|index\.php|robots\.txt|favicon\.ico|favicon\.png|heartbeat\.php|instance\.php)
-RewriteRule ^(.*)$ /source/index.php/$1 [L]
+RewriteRule ^(.*)$ /index.php/$1 [L]
